Fix Bug 386328 - Akregator crashes when opening configuration dialog if "Show Tray Icon" is disabled

BUG: 386328